# raytracer

./: CMakeLists.txt  plot_results.py  raytracer_simple.cpp  raytracing.cpp  raytracing_kokkos.cpp  raytracing_simple.cpp
include/: raytracer_old.h
python/: make_binary.py  plot_results.py  plot_results_3d.py  plot_results_3d_io.py  run_all_gpts.py
src/: raytracer.cpp  raytracer_3d.cpp  raytracer_3d.cu  raytracer_3d_io.cu  raytracer_kernels.cu  raytracer_old.cpp
